# yasm

./: .cvsignore  .drone.yml  .gitignore  .indent.pro  AUTHORS  CMakeLists.txt  COPYING  ConfigureChecks.cmake  HACKING  INSTALL  Makefile  Makefile.am  README  SECURITY.md  YASM-VERSION-GEN.bat  YASM-VERSION-GEN.sh  acconfig.h  acinclude.m4  autogen.sh  basename.c  ci-build.sh  config.h.cmake  configure.ac  configure.in  dirname.c  genstring.c  libyasm-stdint.h.cmake  libyasm.h  mkinstalldirs  out_test.sh  splint.sh  strsep.c  test_hd.c  test_hd.pl  util.h  x86insn_gas.gperf  x86insn_nasm.gperf  x86insns.c  yasm.1  yasm_arch.7  (+3 more)
Mkfiles/: Makefile.dj  Makefile.flat  Makefile.mingw  Makefile.vc  config.h.dj  config.h.vc  nightly-build.pl
check/: Makefile.am  Makefile.inc  check.c  check.h  check_impl.h  check_log.c  check_log.h  check_msg.c  check_msg.h  check_print.c  check_run.c  error.c  error.h  list.c  list.h
config/: .gitignore  ltmain.sh  mkinstalldirs
doc/: Makefile.am
frontends/: CMakeLists.txt  Makefile.inc
frontends/tasm/: CMakeLists.txt  Makefile.inc  tasm-options.c  tasm-options.h  tasm.c
include/: .cvsignore  Makefile.am  bytecode.h  errwarn.h  expr.h  globals.h  symrec.h  util.h
libltdl/: Makefile.am  acinclude.m4  ltdl.c
libyasm/: .cvsignore  CMakeLists.txt  Makefile.inc  arch.c  arch.h  assocdat.c  assocdat.h  bc-align.c  bc-data.c  bc-incbin.c  bc-insn.c  bc-int.h  bc-org.c  bc-reserve.c  bitvect.c  bitvect.h  bytecode.c  bytecode.h  cmake-module.c  compat-queue.h  coretype.h  dbgfmt.h  errwarn.c  errwarn.h  expr-int.h  expr.c  expr.h  file.c  file.h  floatnum.c  floatnum.h  floatnum_internal.h  genmodule.c  hamt.c  hamt.h  insn.c  insn.h  intnum.c  intnum.h  inttree.c  (+33 more)
libyasm/tests/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.inc  absloop-err.errwarn  bitvect_test.c  bytecode_test.c  combpath_test.c  duplabel-err.errwarn  expr-wide-ident.hex  floatnum_test.c  incbin.asm  incbin.hex  jmpsize1-err.errwarn  leb128_test.c  libyasm_test.sh  memexpr_test.c  opt-circular2-err.errwarn  opt-circular3-err.errwarn  reserve-err1.errwarn  reserve-err2.errwarn  splitpath_test.c  timesover-err.errwarn  uncstring_test.c  utf.asm  utf.errwarn  utf.hex  value-err.errwarn
m4/: Makefile.am  Makefile.inc  ax_create_stdint_h.m4  cython.m4  libtool.m4  longlong.m4  ltdl.m4  pyrex.m4  pythonhead.m4
modules/: CMakeLists.txt  Makefile.inc
modules/preprocs/nasm/: CMakeLists.txt  Makefile.inc  genmacro.c  genversion.c  macros.pl  nasm-eval.c  nasm-eval.h  nasm-pp.c  nasm-pp.h  nasm-preproc.c  nasm.h  nasmlib.c  nasmlib.h  standard.mac
modules/preprocs/nasm/tests/: Makefile.inc  ifcritical-err.errwarn  nasmpp-nested.errwarn  nasmpp_test.sh
nointl/: libintl.h
plugins/: README
po/: .cvsignore  .gitignore  Makevars  POTFILES.in
src/: .cvsignore  .indent.pro  Makefile.am  arch.c  arch.h  bc-int.h  bison.y  bison.y.in  bitvect.c  bitvect.h  bytecode.c  bytecode.h  compat-queue.h  coretype.h  dbgfmt.h  errwarn.c  errwarn.h  expr-int.h  expr.c  expr.h  file.c  file.h  floatnum.c  floatnum.h  gen_instr.pl  globals.c  globals.h  hamt.c  hamt.h  intnum.c  intnum.h  lclint.sh  linemgr.c  linemgr.h  main.c  mergesort.c  module.c  module.h  objfmt.c  objfmt.h  (+26 more)
src/arch/: Makefile.am  Makefile.inc
src/arch/x86/: Makefile.am  Makefile.inc  arch.c  bytecode.c  expr.c  x86-int.h  x86arch.c  x86arch.h  x86bc.c  x86expr.c  x86id.re
src/arch/x86/tests/: Makefile.inc  addbyte.hex  addrop.hex  cpubasic-err.asm  div-err.errwarn  effaddr.hex  lds-err.errwarn  nomem64-err.errwarn  nomem64.asm  nomem64.hex  opsize-err.errwarn  x86_test.sh
src/dbgfmts/null/: null-dbgfmt.c
src/objfmts/: Makefile.am  Makefile.inc
src/objfmts/coff/: Makefile.inc  coff-objfmt.c
src/objfmts/coff/tests/: coff_test.sh  cofftest.hex
src/objfmts/dbg/: Makefile.am  Makefile.inc  dbg-objfmt.c  objfmt.c
src/objfmts/elf/: elf64.h  elf_generic.h
src/optimizers/: Makefile.am  Makefile.inc
src/optimizers/basic/: Makefile.am  Makefile.inc  basic-optimizer.c  optimizer.c
src/optimizers/dbg/: .cvsignore  Makefile.am
src/parsers/: Makefile.am  Makefile.inc
src/parsers/nasm/: Makefile.am  Makefile.inc  bison.y.in  gen_instr.pl  nasm-bison.y  nasm-defs.h  nasm-parser.c  nasm-parser.h  nasm-token.re  parser.c  token.l.in
src/parsers/nasm/tests/: Makefile.inc  nasm_test.sh
src/preprocs/: Makefile.am  Makefile.inc
src/preprocs/nasm/: Makefile.inc  nasm-pp.c  nasm-preproc.c  nasmlib.c  nasmlib.h
src/preprocs/raw/: Makefile.am  Makefile.inc  preproc.c  raw-preproc.c
src/preprocs/yapp/: Makefile.inc  yapp-preproc.c  yapp-preproc.h  yapp-token.h  yapp-token.l
src/preprocs/yapp/tests/: Makefile.inc  comment.pre  define.pre  ifdef.asm  ifdef.pre  include.asm  include.pre  pdefine.pre  raw.pre  rinclude.asm  rinclude.pre  yapp_test.sh
src/tests/: .cvsignore  Makefile.am  Makefile.inc  bitvect_test.c  bytecode_test.c  floatnum_test.c  memexpr_test.c
tests/: .cvsignore  Makefile.am  win32-relocovfl.asm
tests/nasm/: addrop.asm  binfmt.asm  binfmt2.asm  bits.asm  data.asm  dir.asm  enter.asm  equ.asm  errors.asm  fp.asm  fp2.asm  global.asm  jumps.asm  labels.asm  labels2.asm  labels3.asm  lds.asm  multiequ.asm  multiext.asm  multisect3.asm  multisect4.asm  numconst.asm  org.asm  reloc.asm  reloc2.asm  second.asm  store.asm  string.asm  test1.asm  times.asm  vbeaf.asm
tools/: Makefile.am  Makefile.inc  gencheck.py
tools/genmacro/: CMakeLists.txt  Makefile.inc  genmacro.c
tools/genperf/: CMakeLists.txt  Makefile.inc  genperf.c  perfect.c
tools/re2c/: .cvsignore  CHANGELOG  CMakeLists.txt  Makefile.am  Makefile.inc  actions.c  basics.h  cleanup.c  cleanup.pl  code.c  code.cc  dfa.c  dfa.cc  dfa.h  globals.h  ins.h  main.c  parse.h  parser.h  parser.y  re.h  re2c-parser.y  re2c.c  scanner.c  scanner.cc  scanner.h  scanner.re  substr.c  substr.cc  substr.h  token.h  translate.c
tools/re2c/bootstrap/: parser.cc  scanner.c  y.tab.h
tools/re2c/examples/: repeater.re
yasm/: BSD.txt  COPYING  HACKING  Makefile.am  autogen.sh  configure.ac  libyasm.h  out_test.sh  splint.sh
(+827 files in other folders)
